# me3-profiles

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
contents/darksouls3/: SeamlessCoop + Cinders.me3  SeamlessCoop + Convergence.me3
contents/darksouls3/SeamlessCoop + Cinders/: SeamlessCoop + Cinders.me3  cinders_install.py
contents/darksouls3/SeamlessCoop + Convergence/: SeamlessCoop + Convergence.me3
contents/eldenring/: ELDEN RING Reforged.me3  SeamlessCoop + The Convergence.me3
contents/eldenring/ELDEN RING Reforged/: ELDEN RING Reforged.me3  err_install_hook.py
contents/eldenring/The Convergence/: The Convergence.me3  convergence_install_hook.py
contents/nightreign/: 2Pz's collection.me3  Seamless Co-op + 6 Player Fixes.me3  Seamless Co-op.me3  Storm Control.me3
contents/nightreign/MMV + SoTE & DS3 Weapons/: MMV + SoTE & DS3 Weapons.me3  mmv_install.py
scripts/: validate_profiles.py
