[project]
name = "me3-profiles"
version = "0.1.0"
description = "Community profiles for me3-manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I", # isort
  "B", # flake8-bugbear
  "LOG", # flake8-logging
  "G", # flake8-logging-format
  "PIE", # flake8-pie
  "T20", # flake8-print
  "UP", # pyupgrade
]
ignore = [
  # Allow `pass` (more obvious that it's a placeholder)
  "PIE790",
  # Allow redundant mode="r" arg for open()
  "UP015",
]

[tool.ruff.lint.per-file-ignores]
# Ok to use print() in standalone scripts
"scripts/*" = ["T20"]
